--- a/WolvenKit/Views/Others/StartupViewer.xaml
+++ b/WolvenKit/Views/Others/StartupViewer.xaml
@@ -4,8 +4,8 @@
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
  xmlns:local="clr-namespace:WolvenKit.Views.Others"
- xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
- Width="500"
+ xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+    Width="500"
  Height="500"
  d:DesignHeight="450"
  d:DesignWidth="800"
@@ -29,5 +29,7 @@
              />
 
         </StackPanel>
+        <syncfusion:SfBusyIndicator AnimationType="Gear" />
+
     </Grid>
 </UserControl>
