--- a/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
@@ -819,7 +819,7 @@
 
             <hc:Interaction.Triggers>
                 <hc:EventTrigger EventName="SearchStarted">
-                    <hc:EventToCommand Command="{Binding SearchStartedCommand}" PassEventArgsToCommand="True" />
+                    <hc:EventToCommand Command="{Binding PESearchStartedCommand}" PassEventArgsToCommand="True" />
                 </hc:EventTrigger>
             </hc:Interaction.Triggers>
         </hc:SearchBar>
